--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -1,2 +1,2 @@
-<h1>Sample</h1>
-<nav><a href="./">Home</a> / <a href="table.html">Table</a></nav>
+<h1>Menu</h1>
+<nav><a href="./">Top</a> / <a href="table.html">Table</a></nav>
