--- a/assets/components/footer.html
+++ b/assets/components/footer.html
@@ -1,5 +1,3 @@
 <small>
-  Contact: your-mail.address<br />
-  <a href="#">LR2IR</a> / <a href="#">Mocha</a> /
-  <a href="#">etc</a>
+  Contact: https://x.com/srl_rnt<br />
 </small>
